--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -8,19 +8,23 @@
 	position: relative;
 	display: flex;
 	align-items: center;
-	min-height: 260px;
 	background: var(--color-grey-light);
 	padding:  var(--spacer-20) 0;
 	margin-bottom: var(--spacer-80);
+	min-height: 244px;
+
+	@media (--viewport-medium) {
+		min-height: 260px;
+	}
 
 	/* CASE: Page with featured image */
 	&.c-subheader--has-image {	
-		min-height: 440px;
+		min-height: 308px;
 
 		@media (--viewport-medium) {
 			align-items: flex-end;
 			padding: var(--spacer-20) 0 var(--spacer-80) 0; 
-
+			min-height: 440px;
 		}
 	}
 }
@@ -45,6 +49,10 @@
  * Subheader: Image component
  * ----------------------------------------------------------------------------- */
 
-.c-subheader__media__image {
-	min-height: 440px;
+.c-subheader__media {
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
