--- a/wp-content/themes/core/components/image/css/image.pcss
+++ b/wp-content/themes/core/components/image/css/image.pcss
@@ -5,15 +5,6 @@
  * ----------------------------------------------------------------------------- */
 
 /* -----------------------------------------------------------------------------
- * Image Component: Wrapper element
- *
- * Generally, a `figure` for foreground usages and a `div` for background usages.
- * Customizable via component's attributes.
- * ----------------------------------------------------------------------------- */
-
-.c-image {}
-
-/* -----------------------------------------------------------------------------
  * Image Component: Image Link
  *
  * If provided, wraps the component's image element
@@ -22,14 +13,15 @@
 .c-image__link {}
 
 /* -----------------------------------------------------------------------------
- * Image Component: Image Element
+ * Image Component: Wrapper element
  *
- * An `img` for foreground usages and a `div` for background usages.
+ * Generally, a `figure` for foreground usages and a `div` for background usages.
+ * Customizable via component's attributes.
  * ----------------------------------------------------------------------------- */
 
-.c-image__image {
+.c-image {
 	/* CASE: Background image implementation. */
-	.c-image--bg & {
+	&.c-image--bg .c-image__image {
 		background: center center no-repeat;
 		background-size: cover;
 		bottom: 0;
@@ -41,8 +33,20 @@
 		width: 100%;
 	}
 
+	/* CASE: Using image in figure tag, (not as a background). */
+	&.c-image--figure {
+		height: 100%;
+		width:100%;
+		
+		img {
+			height: 100%;
+			width: 100%;
+			object-fit: cover;
+		}
+	}
+
 	/* CASE: Apply an overlay. */
-	.c-image--overlay & {
+	&.c-image--overlay {
 		&:after {
 			@mixin image-overlay;
 
@@ -50,13 +54,12 @@
 			opacity: 0.5;
 		}
 	}
-
+	
 	/* CASE: Apply a gradient overlay. */
-	.c-image--gradient-overlay & {
+	&.c-image--gradient-overlay  {
 		&:after {
 			@mixin image-overlay;
 
-			right: 22.5%;
 			background: linear-gradient(90deg, var(--color-neutral-90) 0%, rgba(21, 21, 21, 0.6) 63.54%, rgba(21, 21, 21, 0) 100%);
 			opacity: 0.9;
 		}
