stashing current work

--- a/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/actions/_mixins.pcss
@@ -73,9 +73,9 @@
 		}
 	}
 
-	/* CASE: Reversed out/light theme */
+	/* CASE: Reversed out/light text */
 	&.is-style-light,
-	.t-theme--light & {
+	.t-text--light & {
 		/* Currently no changes from default. */
 	}
 }
@@ -115,7 +115,7 @@
 
 	/* CASE: Reversed out/light theme */
 	&.is-style-light,
-	.t-theme--light & {
+	.t-text--light & {
 		color: var(--color-white);
 
 		/* CASE: Disabled */
@@ -252,7 +252,7 @@
 
 	/* CASE: Reversed out/light theme */
 	&.is-style-light,
-	.t-theme--light & {
+	.t-text--light & {
 		color: var(--color-white);
 
 		&:focus,
