--- a/wp-content/themes/core/assets/css/src/theme/forms/legend.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/forms/legend.pcss
@@ -12,7 +12,7 @@
 legend {
 	display: block;
 	margin-bottom: var(--spacer-20);
-	color: var(--form-color);
+	color: var(--color-text);
 	letter-spacing: var(--form-letter-spacing);
 	text-transform: var(--form-text-transform);
 	font: normal var(--form-font-weight-secondary) var(--form-font-size-secondary) / 1 var(--form-font-family);
@@ -24,7 +24,7 @@ legend {
  * ------------------------------------------------------------------------- */
 
 .form-legend {
-	color: var(--form-color);
+	color: var(--color-text);
 	margin-bottom: var(--spacer-20);
 	padding: 0 8px;
 	text-align: left;
