--- a/wp-content/themes/core/components/blocks/content_columns/css/content-columns.pcss
+++ b/wp-content/themes/core/components/blocks/content_columns/css/content-columns.pcss
@@ -4,7 +4,10 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.b-content-columns {}
+.b-content-columns {
+	background: var(--color-bgd-content);
+	color: var(--color-text);
+}
 
 /* -----------------------------------------------------------------------------
  * Content Columns: Container
