--- a/wp-content/themes/core/components/blocks/hero/css/hero.pcss
+++ b/wp-content/themes/core/components/blocks/hero/css/hero.pcss
@@ -10,7 +10,8 @@
 	align-items: center;
 	min-height: 640px;
 	padding: var(--spacer-80) 0;
-	background-color: var(--color-grey-dark);
+	background-color: var(--color-bgd-content);
+	color: var(--color-text);
 
 	@media (--viewport-medium) {
 		min-height: 720px;
