--- a/wp-content/themes/core/components/blocks/interstitial/css/interstitial.pcss
+++ b/wp-content/themes/core/components/blocks/interstitial/css/interstitial.pcss
@@ -9,7 +9,8 @@
 	display: flex;
 	align-items: center;
 	padding: var(--spacer-80) 0;
-	background-color: var(--color-grey-dark);
+	background-color: var(--color-bgd-content);
+	color: var(--color-text);
 
 	@media (--viewport-full) {
 		padding: var(--spacer-90) 0;
