--- a/wp-content/themes/core/components/card/css/card.pcss
+++ b/wp-content/themes/core/components/card/css/card.pcss
@@ -7,6 +7,8 @@
 .c-card {
 	display: flex;
 	flex-flow: column nowrap;
+	background: var(--color-bgd-content);
+	color: var(--color-text);
 
 	/* CASE: Whole card is a link. */
 	&.has-target-link {
