--- a/wp-content/themes/core/components/content_block/css/content-block.pcss
+++ b/wp-content/themes/core/components/content_block/css/content-block.pcss
@@ -5,6 +5,7 @@
  * ----------------------------------------------------------------------------- */
 
 .c-content-block {
+	color: var(--color-text);
 	max-width: var(--grid-width-staggered-double);
 
 	/* CASE: Contents are centered */
