--- a/wp-content/themes/core/integrations/gravity-forms/css/controls/radio-checkbox.pcss
+++ b/wp-content/themes/core/integrations/gravity-forms/css/controls/radio-checkbox.pcss
@@ -38,7 +38,7 @@
 		}
 
 		input:checked ~ .gf-radio-checkbox-other-placeholder {
-			color: var(--form-control-color);
+			color: var(--color-text);
 
 			&:after {
 				opacity: 1;
