--- a/wp-content/themes/core/components/blocks/accordion/css/accordion.pcss
+++ b/wp-content/themes/core/components/blocks/accordion/css/accordion.pcss
@@ -4,7 +4,10 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.b-accordion {}
+.b-accordion {
+	background: var(--color-bgd-content);
+	color: var(--color-text);
+}
 
 /* -----------------------------------------------------------------------------
  * Accordion: Container
