--- a/wp-content/themes/core/components/blocks/card_grid/css/card_grid.pcss
+++ b/wp-content/themes/core/components/blocks/card_grid/css/card_grid.pcss
@@ -4,7 +4,9 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.b-card-grid {}
+.b-card-grid {
+	background: var(--color-bgd-content);
+}
 
 /* -----------------------------------------------------------------------------
  * Block Header
