--- a/wp-content/themes/core/components/blocks/quote/css/quote.pcss
+++ b/wp-content/themes/core/components/blocks/quote/css/quote.pcss
@@ -9,7 +9,8 @@
 	display: flex;
 	align-items: center;
 	padding: 0;
-	background-color: var(--color-black);
+	background-color: var(--color-bgd-content);
+	color: var(--color-text);
 
 	/* CASE: Layout: Media Overlay */
 	&.c-block--layout-overlay {
