--- a/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
@@ -223,4 +223,10 @@
 	text-transform: uppercase;
 	font-size: 13px;
 	letter-spacing: 0.5px;
+
+	/* CASE: Dark Theme */
+	.t-theme--dark & {
+		background: var(--color-white);
+		color: var(--color-black);
+	}
 }
