updated individual blocks missing background calls

--- a/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
+++ b/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
@@ -1,5 +1,16 @@
 /* -----------------------------------------------------------------------------
  *
+ * Content Loop
+ *
+ * ----------------------------------------------------------------------------- */
+
+.b-content-loop {
+	background: var(--color-bgd-content);
+	color: var(--color-text);
+}
+
+/* -----------------------------------------------------------------------------
+ *
  * Content Loop Header
  *
  * ----------------------------------------------------------------------------- */
