--- a/wp-content/themes/core/components/blocks/gallery_grid/css/gallery_grid.pcss
+++ b/wp-content/themes/core/components/blocks/gallery_grid/css/gallery_grid.pcss
@@ -4,6 +4,10 @@
  *
  * ----------------------------------------------------------------------------- */
 
+.b-gallery-grid {
+	background: var(--color-bgd-content);
+}
+
 .b-gallery-grid__content {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
