--- a/wp-content/themes/core/components/blocks/icon_grid/css/icon_grid.pcss
+++ b/wp-content/themes/core/components/blocks/icon_grid/css/icon_grid.pcss
@@ -4,6 +4,10 @@
  *
  * ----------------------------------------------------------------------------- */
 
+.b-icon-grid {
+	background: var(--color-bgd-content);
+}
+
 .b-icon-grid__header {
     margin-bottom: var(--spacer-60);
 }
