--- a/wp-content/themes/core/components/blocks/links/css/links.pcss
+++ b/wp-content/themes/core/components/blocks/links/css/links.pcss
@@ -5,6 +5,7 @@
  * ----------------------------------------------------------------------------- */
 
 .b-links {
+	background: var(--color-bgd-content);
 
 	/* CASE: Layout Stacked is slightly different than content block inline layout */
 	.c-content-block--layout-inline {
