--- a/wp-content/themes/core/components/blocks/media_text/css/media-text.pcss
+++ b/wp-content/themes/core/components/blocks/media_text/css/media-text.pcss
@@ -5,6 +5,8 @@
  * ----------------------------------------------------------------------------- */
 
 .b-media-text {
+	background: var(--color-bgd-content);
+
 	/* CASE: Width: Full - This is different from `full-bleed`. */
 	&.c-block--width-full {
 		max-width: none;
