--- a/wp-content/themes/core/components/blocks/spacer/css/spacer.pcss
+++ b/wp-content/themes/core/components/blocks/spacer/css/spacer.pcss
@@ -5,6 +5,8 @@
  * ----------------------------------------------------------------------------- */
 
 .b-spacer {
+	background: var(--color-bgd-content);
+
 	height: var(--spacer-30);
 
 	@media (--viewport-medium) {
