--- a/wp-content/themes/core/components/blocks/stats/css/stats.pcss
+++ b/wp-content/themes/core/components/blocks/stats/css/stats.pcss
@@ -5,6 +5,7 @@
  * ----------------------------------------------------------------------------- */
 
 .b-stats {
+	background: var(--color-bgd-content);
 
 	.c-statistic {
 		height: 100%;
