--- a/wp-content/themes/core/components/blocks/tabs/css/tabs.pcss
+++ b/wp-content/themes/core/components/blocks/tabs/css/tabs.pcss
@@ -4,7 +4,10 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.b-tabs {}
+.b-tabs {
+	background: var(--color-bgd-content);
+	color: var(--color-text);
+}
 
 /* -----------------------------------------------------------------------------
  * Tabs: Header
