--- a/wp-content/themes/core/components/blocks/logos/css/logos.pcss
+++ b/wp-content/themes/core/components/blocks/logos/css/logos.pcss
@@ -4,7 +4,9 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.b-logos {}
+.b-logos {
+	background: var(--color-bgd-content);
+}
 
 /* -----------------------------------------------------------------------------
  * Logos Block Header
