adding custom admin css for acf sq1 block fields

--- a/wp-content/themes/core/assets/css/src/admin/master.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/master.pcss
@@ -15,5 +15,7 @@
 /* WP-Admin Variables */
 @import "_variables.pcss";
 
-/* Image Select Field Mods */
-@import "acf/acf-image-select.pcss";
+/* ACF Mods */
+@import "acf/all.pcss";
+
+
