--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -16,16 +16,16 @@
 	@media (--viewport-medium) {
 		min-height: 260px;
 	}
+}
 
-	/* CASE: Page with featured image */
-	&.c-subheader--has-image {	
-		min-height: 308px;
+/* CASE: Page with featured image */
+.c-subheader--has-image {	
+	min-height: 308px;
 
-		@media (--viewport-medium) {
-			align-items: flex-end;
-			padding: var(--spacer-20) 0 var(--spacer-80) 0; 
-			min-height: 440px;
-		}
+	@media (--viewport-medium) {
+		align-items: flex-end;
+		padding: var(--spacer-20) 0 var(--spacer-80) 0; 
+		min-height: 440px;
 	}
 }
 
@@ -51,8 +51,8 @@
 
 .c-subheader__media {
 	position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
