--- a/wp-content/themes/core/assets/css/src/admin/acf/acf.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/acf/acf.pcss
@@ -1,7 +1,7 @@
 /* -----------------------------------------------------------------------------
  *
  * ACF Style Overrides
- *
+ * Use this for sweeping/global changes.
  *
  * ----------------------------------------------------------------------------- */
 
@@ -16,10 +16,9 @@
 }
 
 /* if hiding a label on a text field, increase the space above */
-.block-editor .edit-post-sidebar .acf-fields>.acf-field.tribe-acf-hide-label.acf-field-text {
+.block-editor .edit-post-sidebar .acf-fields > .acf-field.tribe-acf-hide-label.acf-field-text {
 	margin-top: 24px;
 }
-
 
 /* size down instructional text for all fields */
 .block-editor .acf-field .acf-input > p.description, .acf-block-component .tribe-acf-instructions p {
