--- a/wp-content/themes/core/assets/css/src/admin/acf/acf-repeater.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/acf/acf-repeater.pcss
@@ -2,50 +2,58 @@
 * === UPDATES TO REPEATER FIELD ===
 * (REQUIRES 'BLOCK' LAYOUT) stack the fields in a sane manner, reduce some padding to give it room to breath
 */
-.edit-post-sidebar .acf-repeater.-row .acf-fields.-left>.acf-field:before {
-    display: none;
+
+.edit-post-sidebar .acf-repeater.-row .acf-fields.-left > .acf-field:before {
+	display: none;
 }
 
-.block-editor .edit-post-sidebar .acf-fields>.acf-repeater {
+.block-editor .edit-post-sidebar .acf-fields > .acf-repeater {
 	margin: 0 8px;
 }
 
-
-.edit-post-sidebar .acf-block-panel .acf-fields>.acf-field-repeater {
-    margin-left: 4px;
-    margin-right: 4px;
-}
-.edit-post-sidebar .acf-block-panel .acf-fields>.acf-field .acf-repeater.-row .acf-label {
-    float: none;
-    width: 100%;
+.edit-post-sidebar .acf-field-repeater a.acf-icon.-collapse.small {
+	z-index: 2;
 }
 
-.edit-post-sidebar .acf-repeater.-row .acf-fields.-left>.acf-field>.acf-input {
-    width: 100%;
+.edit-post-sidebar .acf-block-panel .acf-fields > .acf-field-repeater {
+	margin-left: 4px;
+	margin-right: 4px;
 }
 
-.edit-post-sidebar .acf-block-panel .acf-fields>.acf-field .acf-repeater.-row .acf-field {
-    margin: 16px 0px;
+.edit-post-sidebar .acf-block-panel .acf-fields > .acf-field .acf-repeater.-row .acf-label {
+	float: none;
+	width: 100%;
 }
-.edit-post-sidebar .acf-block-panel .acf-fields>.acf-field-repeater > .acf-label {
-    margin-left: 16px;
+
+.edit-post-sidebar .acf-repeater.-row .acf-fields.-left > .acf-field > .acf-input {
+	width: 100%;
 }
+
+.edit-post-sidebar .acf-block-panel .acf-fields > .acf-field .acf-repeater.-row .acf-field {
+	margin: 16px 0;
+}
+
 .edit-post-sidebar .acf-repeater .acf-row-handle {
-    width: 8px;
-    padding: 4px;
+	width: 8px;
+	padding: 4px;
 }
 
 /*
 * === CREATE SOME SEPARATION BETWEEN REPEATER ITEMS === */
-.edit-post-sidebar .acf-repeater>table {
-    border-collapse: separate;
-    border-spacing: 0 15px;
-    background: none;
-    border: none;
+.edit-post-sidebar .acf-repeater > table {
+	border-collapse: separate;
+	border-spacing: 0 15px;
+	background: none;
+	border: none;
+	margin-top: -15px;
 }
-.edit-post-sidebar .acf-repeater>table .acf-row {
-   /* box-shadow: 0 0 0 1px #ccd0d4;*/
+
+.edit-post-sidebar .acf-repeater.-row > table > tbody > tr > td
+, .acf-repeater.-block > table > tbody > tr > td {
+	border: 1px solid #e1e1e1;
 }
-.edit-post-sidebar .acf-repeater.-row>table>tbody>tr>td, .acf-repeater.-block>table>tbody>tr>td{
-    border: 1px solid #E1E1E1;
+
+/* left align the 'add' button on repeaters */
+.acf-repeater > .acf-actions {
+	text-align: left;
 }
