--- a/wp-content/themes/core/assets/css/src/admin/master.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/master.pcss
@@ -11,6 +11,7 @@
 
 /* Theme Imports */
 @import "../_variables.pcss";
+@import "../_mixins.pcss";
 
 /* WP-Admin Variables */
 @import "_variables.pcss";
