addressed final linting issues

--- a/wp-content/themes/core/assets/css/src/admin/acf/acf-repeater.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/acf/acf-repeater.pcss
@@ -48,8 +48,8 @@
 	margin-top: -15px;
 }
 
-.edit-post-sidebar .acf-repeater.-row > table > tbody > tr > td
-, .acf-repeater.-block > table > tbody > tr > td {
+.edit-post-sidebar .acf-repeater.-row > table > tbody > tr > td,
+.acf-repeater.-block > table > tbody > tr > td {
 	border: 1px solid #e1e1e1;
 }
 
