--- a/wp-content/themes/core/assets/css/src/admin/acf/acf.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/acf/acf.pcss
@@ -21,7 +21,8 @@
 }
 
 /* size down instructional text for all fields */
-.block-editor .acf-field .acf-input > p.description, .acf-block-component .tribe-acf-instructions p {
+.block-editor .acf-field .acf-input > p.description,
+.acf-block-component .tribe-acf-instructions p {
 	font-size: 11px;
 }
 
@@ -29,6 +30,7 @@
 .block-editor .edit-post-sidebar .wp-editor-tabs {
 	float: none;
 }
+
 .block-editor .edit-post-sidebar .wp-editor-tabs button {
 	margin: 5px 5px 0 0;
 }
