nesting and linting

--- a/wp-content/themes/core/assets/css/src/admin/acf/acf-image.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/acf/acf-image.pcss
@@ -1,10 +1,13 @@
 /* hide the 'No Image Selected' text for the image field */
-.block-editor .edit-post-sidebar .acf-image-uploader p {
-	font-size: 0;
-}
+.block-editor {
 
-/* Give the image field a border */
-.block-editor .edit-post-sidebar .acf-field-image .acf-input {
-	border: 1px solid #ccd0d4;
-	padding: 12px;
+	.acf-block-component .acf-image-uploader p {
+		font-size: 0;
+	}
+
+	/* Give the image field a border */
+	.acf-field-image .acf-input {
+		border: 1px solid #ccd0d4;
+		padding: 12px;
+	}
 }
