--- a/wp-content/themes/core/assets/css/src/admin/acf/acf.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/acf/acf.pcss
@@ -15,22 +15,24 @@
 	}
 }
 
-/* if hiding a label on a text field, increase the space above */
-.block-editor .edit-post-sidebar .acf-fields > .acf-field.tribe-acf-hide-label.acf-field-text {
-	margin-top: 24px;
-}
+.block-editor {
+	/* if hiding a label on a text field, increase the space above */
+	.acf-fields > .acf-field.tribe-acf-hide-label.acf-field-text {
+		margin-top: 24px;
+	}
 
-/* size down instructional text for all fields */
-.block-editor .acf-field .acf-input > p.description,
-.acf-block-component .tribe-acf-instructions p {
-	font-size: 11px;
-}
+	/* size down instructional text for all fields */
+	.acf-field .acf-input > p.description,
+	.acf-block-component .tribe-acf-instructions p {
+		font-size: 11px;
+	}
 
-/* if WYSIWYG tabs are present in the sidebar, don't float them to the right */
-.block-editor .edit-post-sidebar .wp-editor-tabs {
-	float: none;
-}
+	/* if WYSIWYG tabs are present in the sidebar, don't float them to the right */
+	.wp-editor-tabs {
+		float: none;
+	}
 
-.block-editor .edit-post-sidebar .wp-editor-tabs button {
-	margin: 5px 5px 0 0;
+	.wp-editor-tabs button {
+		margin: 5px 5px 0 0;
+	}
 }
