added comment heading to acf image partial

--- a/wp-content/themes/core/assets/css/src/admin/block-editor/acf-image.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/block-editor/acf-image.pcss
@@ -1,6 +1,10 @@
-/* hide the 'No Image Selected' text for the image field */
-.block-editor {
+/* -----------------------------------------------------------------------------
+ * Image Field:
+ * + Give it a border and hide the 'no image selected' text
+ * ----------------------------------------------------------------------------- */
 
+.block-editor {
+	/* hide the 'No Image Selected' text for the image field */
 	.acf-block-component .acf-image-uploader p {
 		font-size: 0;
 	}
