--- a/wp-content/themes/core/assets/css/src/admin/block-editor/acf-repeater.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/block-editor/acf-repeater.pcss
@@ -1,7 +1,10 @@
 /*
-* === UPDATES TO REPEATER FIELD ===
-* (REQUIRES 'BLOCK' LAYOUT) stack the fields in a sane manner, reduce some padding to give it room to breath
-*/
+* ACF Repeater Styles & Overrides
+*
+* Modify spacing and sizing to better accommodate the sidebar
+* Small UX improvements
+*
+* ----------------------------------------------------------------------------- */
 
 .block-editor {
 	/* === Reduce the spacing a bit  === */
