SQONE-281 Adds full-width form to search template

--- a/wp-content/themes/core/components/search_form/index.pcss
+++ b/wp-content/themes/core/components/search_form/index.pcss
@@ -7,4 +7,4 @@
  *
  * ----------------------------------------------------------------------------- */
 
-@import "css/search.pcss";
+@import "css/search-form.pcss";
