SQONE-281 Adding image sizes and max-width for search results

--- a/wp-content/themes/core/components/routes/search/css/search.pcss
+++ b/wp-content/themes/core/components/routes/search/css/search.pcss
@@ -5,6 +5,8 @@
  * ----------------------------------------------------------------------------- */
 
 .search-results__container {
+	max-width: var(--grid-width-staggered-double);
+	margin: 0 auto;
 	padding-top: var(--spacer-70);
 	padding-bottom: var(--spacer-70);
 }
