--- a/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
+++ b/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
@@ -73,6 +73,13 @@
             border-top: 1px solid var(--color-grey-light);
         }
     }
+	/* CASE: Row */
+	&.b-content-loop--layout_row {
+		.c-card__media, .c-card__content {
+			width: var(--grid-6-col);
+		}
+
+	}
 
     /* CASE: Feature */
     &.b-content-loop--layout_feature {
