block margin adjusted

--- a/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
+++ b/wp-content/themes/core/components/blocks/content_loop/css/content_loop.pcss
@@ -62,6 +62,9 @@
  * ----------------------------------------------------------------------------- */
 
 .b-content-loop {
+
+	margin-top: var(--spacer-20);
+	
     .c-card__description {
         margin-top: var(--spacer-30);
     }
