SQONE-281 Making new typgraphy style

--- a/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
@@ -76,6 +76,18 @@
 }
 
 /* -------------------------------------------------------------------------
+ * Display XXX-Small
+ * ------------------------------------------------------------------------- */
+
+@define-mixin t-display-xxx-small {
+	font-family: var(--font-family-sans-serif);
+	font-size: 16px;
+	line-height: 1.75;
+	font-weight: 700;
+	letter-spacing: 0.1px;
+}
+
+/* -------------------------------------------------------------------------
  * Body Large
  * ------------------------------------------------------------------------- */
 
