--- a/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
@@ -53,6 +53,14 @@
 }
 
 /* -------------------------------------------------------------------------
+ * Display XXX-Small
+ * ------------------------------------------------------------------------- */
+
+.t-display-xxx-small {
+	@mixin t-display-xxx-small;
+}
+
+/* -------------------------------------------------------------------------
  * Body Large
  * ------------------------------------------------------------------------- */
 
