--- a/wp-content/themes/core/components/routes/search/css/search.pcss
+++ b/wp-content/themes/core/components/routes/search/css/search.pcss
@@ -32,10 +32,8 @@
  * ----------------------------------------------------------------------------- */
 
 .search-results__summary {
+	@mixin t-display-xxx-small;
 	margin-bottom: var(--spacer-20);
-	line-height: 1.75;
-	font-weight: 700;
-	letter-spacing: 0.1px;
 
 	&:last-child {
 		margin-bottom: 0;
