SQONE-281 Moving search result items to a card style

--- a/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_mixins.pcss
@@ -143,6 +143,16 @@
 }
 
 /* -------------------------------------------------------------------------
+ * Caption Small
+ * ------------------------------------------------------------------------- */
+
+@define-mixin t-caption-small {
+	font-size: 12px;
+	line-height: 2;
+	letter-spacing: 0.1px;
+}
+
+/* -------------------------------------------------------------------------
  * Button
  * ------------------------------------------------------------------------- */
 
