--- a/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/typography/_utilities.pcss
@@ -101,6 +101,14 @@
 }
 
 /* -------------------------------------------------------------------------
+ * Caption
+ * ------------------------------------------------------------------------- */
+
+.t-caption-small {
+	@mixin t-caption-small;
+}
+
+/* -------------------------------------------------------------------------
  * Button
  * ------------------------------------------------------------------------- */
 
