SQONE-281 Adds CR fixes

--- a/wp-content/themes/core/components/card/css/card.pcss
+++ b/wp-content/themes/core/components/card/css/card.pcss
@@ -261,7 +261,7 @@
 
 		&:focus,
 		&:hover,
-		.c-card--style-search:hover& {
+		.c-card--style-search:hover& { /* target a hover state on the parent card root element */
 			color: var(--color-primary);
 		}
 	}
