--- a/wp-content/themes/core/components/header/subheader/css/subheader.pcss
+++ b/wp-content/themes/core/components/header/subheader/css/subheader.pcss
@@ -23,6 +23,10 @@
 	@media (--viewport-medium) {
 		align-items: flex-end;
 	}
+	
+	.c-subheader__content { 
+		color: var(--color-white);
+	}
 }
 
 /* -----------------------------------------------------------------------------
