SQONE-281 Fixing return type and small flexbox issue with search card

--- a/wp-content/themes/core/components/card/css/card.pcss
+++ b/wp-content/themes/core/components/card/css/card.pcss
@@ -87,6 +87,7 @@
 		@media (--viewport-medium) {
 			display: flex;
 			flex-direction: row;
+			justify-content: space-between;
 			padding-top: var(--spacer-40);
 			padding-bottom: var(--spacer-40);
 		}
