arrow separator added to utilities

--- a/wp-content/themes/core/assets/css/src/theme/separators/_utilities.pcss
+++ b/wp-content/themes/core/assets/css/src/theme/separators/_utilities.pcss
@@ -123,3 +123,25 @@
 		}
 	}
 }
+
+/* -----------------------------------------------------------------------------
+ * Child Separator: " > " icon
+ * ----------------------------------------------------------------------------- */
+
+.u-sep-arrow {
+
+	& > * {
+
+		&:after {
+			@mixin icon;
+
+			content: "\e90d";
+			display: inline;
+			padding: 0 3px;
+		}
+
+		&:last-of-type:after {
+			content: none;
+		}
+	}
+}
