breadcrumb link and separator aligned

--- a/wp-content/themes/core/components/breadcrumbs/css/breadcrumbs.pcss
+++ b/wp-content/themes/core/components/breadcrumbs/css/breadcrumbs.pcss
@@ -14,8 +14,10 @@
 }
 
 .c-breadcrumbs__item {
-	margin-right: 10px;
+	margin-right: var(--spacer-10);
 	width: auto;
+    display: flex;
+    align-items: center;
 
 	&:last-child {
 		margin-right: 0;
