--- a/wp-content/themes/core/components/breadcrumbs/css/breadcrumbs.pcss
+++ b/wp-content/themes/core/components/breadcrumbs/css/breadcrumbs.pcss
@@ -10,7 +10,11 @@
 
 .c-breadcrumbs__list {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+	
+	@media (--viewport-small) {
+		flex-direction: row;
+	}
 }
 
 .c-breadcrumbs__item {
@@ -22,10 +26,16 @@
 	&:last-child {
 		margin-right: 0;
 	}
+	
 }
 
 .c-breadcrumbs__anchor {
+	
 	&:hover {
 		text-decoration: underline;
+	}
+
+	@media (--viewport-small) {
+		margin-right: var(--spacer-10);
 	}
 }
