--- a/wp-content/themes/core/components/blocks/links/css/links.pcss
+++ b/wp-content/themes/core/components/blocks/links/css/links.pcss
@@ -5,12 +5,10 @@
  * ----------------------------------------------------------------------------- */
 
 .b-links {
-
 	/* CASE: Layout Stacked is slightly different than content block inline layout */
 	.c-content-block--layout-inline {
 
 		.c-block__title {
-
 			@media (--viewport-medium) {
 				float: none;
 				width: 100%;
@@ -171,7 +169,7 @@
 
 		position: absolute;
 		left: 0;
-		top: 4px;
+		top: 0;
 		display: block;
 		color: currentColor;
 		content: var(--icon-chevron-right);
