updated to add stylelint to components and both to integrations

--- a/wp-content/themes/core/integrations/gravity-forms/css/validation/error.pcss
+++ b/wp-content/themes/core/integrations/gravity-forms/css/validation/error.pcss
@@ -61,8 +61,7 @@
 			&:hover,
 			&:focus {
 				color: currentColor;
-				text-decoration-color: currentColor;
-				text-decoration: underline;
+				text-decoration: underline currentColor;
 			}
 		}
 	}
