--- a/wp-content/themes/core/integrations/spinner/css/default.pcss
+++ b/wp-content/themes/core/integrations/spinner/css/default.pcss
@@ -1,35 +1,49 @@
 @keyframes spinner-line-fade-more {
-	0%, 100% {
+
+	0%,
+	100% {
 		opacity: 0;
 	}
+
 	1% {
 		opacity: 1;
 	}
 }
 
 @keyframes spinner-line-fade-quick {
-	0%, 39%, 100% {
+
+	0%,
+	39%,
+	100% {
 		opacity: 0.25;
 	}
+
 	40% {
 		opacity: 1;
 	}
 }
 
 @keyframes spinner-line-fade-default {
-	0%, 100% {
+
+	0%,
+	100% {
 		opacity: 0.22;
 	}
+
 	1% {
 		opacity: 1;
 	}
 }
 
 @keyframes spinner-line-shrink {
-	0%, 25%, 100% {
+
+	0%,
+	25%,
+	100% {
 		transform: scale(0.5);
 		opacity: 0.25;
 	}
+
 	26% {
 		transform: scale(1);
 		opacity: 1;
