--- a/wp-content/themes/core/integrations/swiper/css/swiper.pcss
+++ b/wp-content/themes/core/integrations/swiper/css/swiper.pcss
@@ -175,7 +175,7 @@
 
 .swiper-button-prev:after,
 .swiper-button-next:after {
-	font-family: swiper-icons;
+	font-family: swiper-icons; /* stylelint-disable-line font-family-no-missing-generic-family-keyword */
 	font-size: var(--swiper-navigation-size);
 	text-transform: none !important;
 	letter-spacing: 0;
