--- a/wp-content/themes/core/components/blocks/stats/css/stats.pcss
+++ b/wp-content/themes/core/components/blocks/stats/css/stats.pcss
@@ -16,7 +16,6 @@
  * ----------------------------------------------------------------------------- */
 
 .b-stats__container {
-
 	/* CASE: Layout Inline */
 	.b-stats--layout-inline & {
 		@media (--viewport-full) {
@@ -67,7 +66,6 @@
  * ----------------------------------------------------------------------------- */
 
 .b-stats__content {
-
 	/* CASE: Layout Inline */
 	.b-stats--layout-inline & {
 		@media (--viewport-full) {
@@ -125,9 +123,8 @@
 
 		/* CASE: All Layouts, Medium Screens, 2up list */
 		@media (--viewport-medium) {
-
 			/* 2up: Hide last 2 list element dividers */
-			&:nth-last-child(-n+2):not(:nth-child(2n+2)) {
+			&:nth-last-child(-n+2):not(:nth-child(2n+2)) { /* stylelint-disable-line selector-type-no-unknown */
 				border-bottom: 0;
 			}
 
@@ -136,7 +133,7 @@
 			}
 
 			/* 2up: Hide last element border, if not divisible by 2 */
-			&:last-child:not(2n+2) .c-statistic {
+			&:last-child:not(2n+2) .c-statistic { /* stylelint-disable-line selector-type-no-unknown */
 				border-right: 0;
 			}
 
@@ -152,8 +149,8 @@
 
 		.b-stats__list-item {
 			@media (--viewport-full) {
-
 				/* 4up: Hide borders for last row */
+
 				/* Target last 4 items, but not the first 4 */
 				&:nth-last-child(-n+4):not(:nth-child(-n+4)) {
 					border-bottom: 0;
@@ -179,7 +176,6 @@
 
 			.b-stats__list-item {
 				@media (--viewport-full) {
-
 					/* 4up: Hide borders for last row */
 					&:nth-last-child(-n+4) {
 						border-bottom: 0;
