--- a/wp-content/themes/core/components/routes/not_found/css/not_found.pcss
+++ b/wp-content/themes/core/components/routes/not_found/css/not_found.pcss
@@ -1,3 +1,9 @@
+/* -----------------------------------------------------------------------------
+ *
+ * Route: Not Found Page
+ *
+ * ----------------------------------------------------------------------------- */
+
 .not-found {
 	text-align: center;
 	margin: var(--spacer-60) 0;
@@ -23,7 +29,7 @@
 	}
 }
 
-.no-found__search {
+.not-found__search {
 	max-width: var(--grid-max-width-staggered-double);
 	margin-left: auto;
 	margin-right: auto;
