[SQONE-279] fix: rename class for BEM formatting. Also some lint cleanup.

--- a/wp-content/themes/core/components/header/subheader_archive/css/subheader_arcihve.pcss
+++ b/wp-content/themes/core/components/header/subheader_archive/css/subheader_arcihve.pcss
@@ -4,9 +4,10 @@
  *
  * ----------------------------------------------------------------------------- */
 
-.c-subheader-archive {
+.c-subheader--archive {
+
 	.c-subheader--has-image & {
-	    align-items: center;
+		align-items: center;
 		padding: var(--spacer-20) 0 var(--spacer-20) 0;
 		min-height: 580px;
 	}
@@ -15,4 +16,3 @@
 		width: calc(75% - var(--grid-gutter));
 	}
 }
-
