[SQONE-291] feat: legacy browser desktop update

--- a/wp-content/themes/core/routes/unsupported_browser/css/_variables.pcss
+++ b/wp-content/themes/core/routes/unsupported_browser/css/_variables.pcss
@@ -4,7 +4,7 @@
 	 * ----------------------------------------------------------------------------- */
 
 	--legacy-min-width: 875px;
-	--legacy-max-width: 906px;
+	--legacy-max-width: 850px;
 
 	/* -----------------------------------------------------------------------------
 	 * Background Colors
@@ -22,7 +22,7 @@
 	--legacy-color-heading: var(--color-text);
 	--legacy-color-footer: var(--color-white);
 	--legacy-color-link: var(--color-link);
-	--legacy-color-link-hover: var(--color-secondary);
+	--legacy-color-link-hover: var(--color-black);
 
 	/* -----------------------------------------------------------------------------
 	 * Header
@@ -34,7 +34,7 @@
 	 * Content
 	 * ----------------------------------------------------------------------------- */
 
-	--legacy-content-padding: 140px 0 160px;
+	--legacy-content-padding: 96px 0;
 
 	/* Content: P's */
 	--legacy-content-font-size: 20px;
@@ -68,8 +68,8 @@
 	--legacy-browser-list-font-weight: 700;
 
 	/* Browser List: Images */
-	--legacy-browser-list-image-padding: 42px 0;
-	--legacy-browser-list-image-spacing: 0 auto 10px;
+	--legacy-browser-list-image-padding: 56px 0 46px;
+	--legacy-browser-list-image-spacing: auto 10px;
 	--legacy-browser-list-image-border: 3px solid var(--color-grey-light);
 	--legacy-browser-list-image-border-radius: var(--border-radius-base);
 	--legacy-browser-list-image-bgd: var(--color-white);
